Log ignored and dropped null/empty elements when combining collections